--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="senai">
                 <span class="senai-ano">2022/2023</span>
                 <span class="senai-titulo">Aprendiz Bom Futuro/Senar/Senai</span>
-                <span class="senai-titulo">Desenvolvedor Treinee</span>
+                <span class="senai-titulo">Desenvolvedor Trainee</span>
                 <p class="senai-texto">Através da minha experiência de aprendizado no Senar/Senai com o Grupo Bom
                     Futuro, tive a oportunidade de adquirir um conhecimento mais aprofundado em desenvolvimento de
                     sistemas e gestão empresarial, permitindo-me aprimorar constantemente minhas habilidades.</p>
