Arumei alguns erros

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <img class="foto" src="img/perfil.jpg" alt="">
         <div>
             <h1>FUTURO</h1>
-            <h2>Desenvolvedor Full Stack <br> Front End & Back End<span class="interrogacao">!</span></h2>
+            <h2>Desenvolvedor Full Stack<span class="interrogacao">!</span></h2>
             <h3>Localizado em cuiabá-MT<span class="ponto">.</span></h3>
         </div>
     </main>
@@ -77,10 +77,10 @@
                 <p>
                     Como desenvolvedor Trainee, que adora trabalhar em projetos de<strong> front-end</strong> e
                     <strong>back-end</strong>. Com experiência em <strong>HTML, CSS, javascript, Bootstrap, UX e UI
-                        Desing,
+                        Design,
                         PHP, Mysql </strong>eu desenvolvo websites responsivos e temas personalizados com designs
                     atraentes.
-                    Além disso, onde já criei alguns projetos back-end como <strong>CRUD</strong>, calculadora de INSS
+                    Além disso, onde já criei alguns projetos back-end, calculadora de INSS
                     usando PHP, uma calculadora simples usando JAVA, validação de login usando <strong>Laravel
                         PHP</strong>,
                     entre outros. Tenho conhecimentos em MySql, o que me permite trabalhar com bancos de dados de
@@ -192,8 +192,8 @@
 
                     <div class="contato">
                         <label class="contato">Email</label>
-                        <input type="email" class="quem_contato validacao" oninput="emailValidate()" required name="email"
-                            id="email">
+                        <input type="email" class="quem_contato validacao" oninput="emailValidate()" required
+                            name="email" id="email">
                         <span class="span-required">Digite um email válido</span>
                     </div>
 
