--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/wag.icon.png" type="image/x-icon">
+    <meta name="description" content="Futuro Dev. Buscando e aprimorando meus conhecimentos>
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,8 +43,8 @@
     </header>
 
     <main class="introducao">
-        <img class="fotocel" src="img/perfil_redondo2.png" alt="">
-        <img class="foto" src="img/perfil.jpg" alt="">
+        <img class="fotocel" src="img/perfil_redondo2.png" alt="foto wag">
+        <img class="foto" src="img/perfil.jpg" alt="foto wag">
         <div>
             <h1>FUTURO</h1>
             <h2>Desenvolvedor Full Stack<span class="interrogacao">!</span></h2>
