--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/wag.icon.png" type="image/x-icon">
-    <meta name="description" content="Futuro Dev. Buscando e aprimorando meus conhecimentos>
+    <meta name="description" content="Futuro Dev. Buscando e aprimorando meus conhecimentos">
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
